force-app/main/default/objects/QuizUserTest__c/QuizUserTest__c.object-meta.xml
<CustomObject>
    <label>QuizUserTest</label>
    <nameField>
        <displayFormat>uTest-{0000}</displayFormat>
        <label>uTest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuizUserTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>