force-app/main/default/objects/QuizUserTest__c/fields/QuizQuestion__c.field-meta.xml
<CustomField>
    <fullName>QuizQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuizQuestion</label>
    <referenceTo>QuizQuestion__c</referenceTo>
    <relationshipName>quizUserTests</relationshipName>
    <type>Lookup</type>
</CustomField>