force-app/main/default/objects/QuizUserTest__c/fields/Selected_Options__c.field-meta.xml
<CustomField>
    <fullName>Selected_Options__c</fullName>
    <label>Selected Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option_A</fullName>
            </value>
            <value>
                <fullName>Option_B</fullName>
            </value>
            <value>
                <fullName>Option_C</fullName>
            </value>
            <value>
                <fullName>Option_D</fullName>
            </value>
            <value>
                <fullName>Option_E</fullName>
            </value>
            <value>
                <fullName>Option_F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>