force-app/main/default/objects/QuizUserTest__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <label>Test Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>