force-app/main/default/objects/QuizUserTest__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>Test Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>