force-app/main/default/objects/QuizUserTest__c/fields/Test_Time__c.field-meta.xml
<CustomField>
    <fullName>Test_Time__c</fullName>
    <label>Test Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>